force-app/main/default/objects/Module__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <summarizedField>Unity__c.Points__c</summarizedField>
    <summaryForeignKey>Unity__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>