force-app/main/default/objects/Module__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>DataManagement</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>AppLogic</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>