force-app/main/default/objects/Module__c/validationRules/To_activate.validationRule-meta.xml
<ValidationRule>
    <fullName>To_activate</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Roles__c) &amp;&amp;  NOT(ISPICKVAL(  Skill__c  , &quot;&quot;))</errorConditionFormula>
    <errorMessage>A roll must be chosen!</errorMessage>
</ValidationRule>